--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -90,12 +90,16 @@
     <script src="static/vendor/datatables/jquery.dataTables.min.js"></script>
     <script src="static/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
+    <!--DataTables CellEdit-->
+    <script src="static/vendor/celledit/js/dataTables.cellEdit.js"></script>
+
     <!--Chart.js-->
     <script src="static/vendor/chart.js/Chart.bundle.min.js"></script>
     <script src="static/vendor/chart.js/chartjs-plugin-colorschemes.min.js"></script>
 
     <!--Bootstrap select-->
     <script src="static/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+
 
     <script type="text/javascript">
         var csrf_token = "{{ csrf_token() }}";
