--- a/web/templates/config.html
+++ b/web/templates/config.html
@@ -155,7 +155,9 @@ $(document).ready(function(){
     
     $(document).on('click', '.chkRow', function () {
         if ($(this).prop('checked')){
-            exclude_columns_idxs.push($(this).val())
+            if ($.inArray($(this).val(), exclude_columns_idxs) == -1){
+                exclude_columns_idxs.push($(this).val())
+            }
         }
         else {
             var index = $.inArray($(this).val(), exclude_columns_idxs);
@@ -400,7 +402,9 @@ $('#submit_config_btn').on('click', function() {
                 $.each(return_data.exclude_columns, function(table, columns){
                     $.each(columns, function(){
                         idx = get_col_idx(table, this.toString())
-                        exclude_columns_idxs.push(idx)
+                        if ($.inArray(idx, exclude_columns_idxs) == -1){
+                            exclude_columns_idxs.push(idx)
+                        }
                     })
                 })
 
