user login functionality

--- a/web/templates/visualization.html
+++ b/web/templates/visualization.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block app_content %}
+<p class="lead">Optimized for Google Chrome</p>
 <div class="row">
     <div class="card col-4">
         <div class="card-body">
