--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -40,17 +40,42 @@
 
         <hr class="sidebar-divider">
 
-        <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('visualization') }}">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Visualization</span></a>
-        </li>
+        {% if current_user.is_anonymous %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('login') }}">
+                <i class="fas fa-fw fa-sign-in-alt"></i>
+                <span>Login</span></a>
+            </li>
+        {% else %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('logout') }}">
+                <i class="fas fa-fw fa-sign-out-alt"></i>
+                <span>Logout</span></a>
+            </li>
+            
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('change_pw') }}">
+                <i class="fas fa-fw fa-user"></i>
+                <span>Change Password</span></a>
+            </li>
 
-        <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('config') }}">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Config</span></a>
-        </li>
+            {% if navbar_access['visualization'] %}
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('visualization') }}">
+                    <i class="fas fa-fw fa-chart-bar"></i>
+                    <span>Visualization</span></a>
+                </li>
+            {% endif %}
+            {% if navbar_access['config'] %}
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('config') }}">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Config</span></a>
+                </li>
+            {% endif %}
+        {% endif %}
+
+       
 
         </ul>
         <!-- End of Sidebar -->
