--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -31,7 +31,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark">
 
         <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="visualization.html">
+        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ url_for('visualization') }}">
             <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
             </div>
