clear outcome card

--- a/web/templates/visualization.html
+++ b/web/templates/visualization.html
@@ -258,6 +258,11 @@
         $('#cb2').html('')
         $('#ch3').text('')
         $('#cb3').html('')
+        $('.form-check-input').prop('checked', false)
+        $('#distribution_choices_text_div').attr('style', 'display: none;')
+        $('#distribution_choices_numeric_div').attr('style', 'display: none;')   
+        c_outcome = {'idx': -1, 'type': null}
+        $('#ch4').text('') 
         c1 = {'idx': -1, 'type': null}
         c2 = {'idx': -1, 'type': null}
         c3 = {'idx': -1, 'type': null}
