--- a/web/templates/visualization.html
+++ b/web/templates/visualization.html
@@ -267,6 +267,8 @@
         c2 = {'idx': -1, 'type': null}
         c3 = {'idx': -1, 'type': null}
         $('#ind_variables').selectpicker('val', '')
+        var graph = $('#graph');
+        if (myChart){myChart.destroy()}
 
     })
 
