--- a/web/templates/visualization.html
+++ b/web/templates/visualization.html
@@ -28,7 +28,7 @@
                     <select class="selectpicker form-control show-tick" id="outcome_variable" data-live-search="true"></select>
                 </div>
             </div>
-            <div class="form-row col-8">
+            <div class="form-row col">
                 <div class="form-group col">
                     <button type="button" class="btn btn-primary" id="update_graph_btn">Update Graph</button>
                 </div>
