--- a/web/templates/visualization.html
+++ b/web/templates/visualization.html
@@ -255,11 +255,11 @@
         $('.form-check-input').prop('checked', false)
         $('#distribution_choices_text_div').attr('style', 'display: none;')
         $('#distribution_choices_numeric_div').attr('style', 'display: none;')   
-        c_outcome = {'idx': -1, 'type': null}
+        c_outcome = {'column_id': -1, 'type': null}
         $('#ch4').text('') 
-        c1 = {'idx': -1, 'type': null}
-        c2 = {'idx': -1, 'type': null}
-        c3 = {'idx': -1, 'type': null}
+        c1 = {'column_id': -1, 'type': null}
+        c2 = {'column_id': -1, 'type': null}
+        c3 = {'column_id': -1, 'type': null}
         $('#ind_variables').selectpicker('val', '')
         var graph = $('#graph');
         if (myChart){myChart.destroy()}
